# labs_cpp

./: .gitignore  .gitingore  CMakeLists.txt  README.md  func.cpp  func.h  libs.h  main.cpp  user.cpp  user.h
func/: func.cpp  func.h
lab_1/: main.cpp
lab_1/func/: func.cpp  func.h
lab_1/user/: user.cpp  user.h
lab_2/: CMakeLists.txt  libs.h  main.cpp  students.sqlite
lab_2/dbFunc/: dbsqlite.cpp  dbsqlite.h
lab_2/func/: func.cpp  func.h
lab_2/user/: user.cpp  user.h
lab_work/: CMakeLists.txt  libs.h  main.cpp  students.sqlite  studentsInfo  test1  zalupaOlgiYurchenko
lab_work/dbFunc/: dbsqlite.cpp  dbsqlite.h
lab_work/func/: func.cpp  func.h
lab_work/lab_4/: pol.cpp  pol.h
lab_work/lab_5/: templates.cpp  templates.h
lab_work/lab_6/: exeptions.h
lab_work/lab_7/: uploadToJSON.cpp  uploadToJSON.h
lab_work/lab_8/: container.h
lab_work/user/: infoProvider.h  user.cpp  user.h
user/: user.cpp  user.h
